unpackaged/main/default/objects/Store_Assist__c/Store_Assist__c.object-meta.xml
<CustomObject>
    <description>A M:M Junction relationship between Assisted Sales and Store Locations. Object is only used for &quot;Location Specific&quot; Store Assists</description>
    <label>Store Assist</label>
    <nameField>
        <displayFormat>StoreAssist-{000000}</displayFormat>
        <label>Store Assist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Assists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>