unpackaged/main/default/objects/Store_Assist__c/fields/Assisted_Sale__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Sale__c</fullName>
    <label>Assisted Sale</label>
    <referenceTo>Assisted_Sales__c</referenceTo>
    <relationshipLabel>Store Assists</relationshipLabel>
    <relationshipName>Store_Assists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>