unpackaged/main/default/objects/Store_Assist__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The Store Assist&#39;s End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>