unpackaged/main/default/objects/Store_Assist__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The Store Assist&#39;s Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>