unpackaged/main/default/objects/Store_Assist__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Store Assists</relationshipLabel>
    <relationshipName>Store_Assists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>